# drata-cli

./: .otto.yml  .pre-commit-config.yaml  Cargo.toml  README.md  build.rs  drata-cli.yml
.github/workflows/: ci.yml  release.yml
docs/: api-v2-overview.md  changelog.md  endpoint-index.md  shakedown-v0.1.0.md  ts-vs-rust-comparison.md
docs/custom-workflows/: create-task-control-approvers-review-linked-evidence.md  create-task-notify-control-not-ready.md  notify-admin-personnel-out-of-compliance-5-days.md  notify-control-owner-artifact-added.md  notify-control-owner-evidence-past-due.md  notify-control-owner-updated.md  notify-control-owners-evidence-renewals-approaching.md  notify-control-owners-evidence-unlinked.md  notify-create-task-risk-residual-score-change.md  notify-employees-non-compliant.md  overview.md  review-updated-risk-treatment-plan.md
docs/design/: 2026-06-27-architecture-implementation-notes.md  2026-06-27-architecture.md  2026-06-28-vendor-security-reviews-implementation-notes.md  2026-06-28-vendor-security-reviews.md
docs/recipes/: add-anti-virus-evidence.md  add-auto-updates-evidence.md  add-completed-security-training-evidence.md  add-hard-drive-encryption-evidence.md  add-hipaa-training-evidence.md  add-mfa-on-idp-evidence.md  add-password-manager-evidence.md  add-screensaver-lock-evidence.md  create-an-api-key.md  custom-fields.md  (+3 more)
spec/: drata-openapi-v2.json
src/: cli.rs  client.rs  config.rs  confirm.rs  expand.rs  filter.rs  lib.rs  main.rs  output.rs  raw.rs  resources.rs  spec.rs  tests.rs  verify.rs
tests/: client.rs  coverage.rs
(+44 files in other folders)
